--- a/vercel.json
+++ b/vercel.json
@@ -2,28 +2,42 @@
   "version": 2,
 
   "builds": [
-    { "src": "*.html", "use": "@vercel/static" },
-    { "src": "styles.css", "use": "@vercel/static" },
-    { "src": "script.js", "use": "@vercel/static" },
-    { "src": "*.{png,jpg,jpeg,svg,webp}", "use": "@vercel/static" }
+    { "src": "**/*.html", "use": "@vercel/static" },
+    { "src": "**/*.css", "use": "@vercel/static" },
+    { "src": "**/*.js", "use": "@vercel/static" },
+    { "src": "**/*.{png,jpg,jpeg,svg,webp}", "use": "@vercel/static" }
   ],
 
-  "cleanUrls": true,
-
-  "redirects": [
+  "routes": [
     {
-      "source": "/",
-      "destination": "/index",
-      "permanent": false
-    }
-  ],
+      "src": "/",
+      "dest": "/index"
+    },
 
-  "headers": [
     {
-      "source": "/(.*)",
-      "headers": [
-        { "key": "Strict-Transport-Security", "value": "max-age=31536000; includeSubDomains; preload" }
-      ]
+      "src": "/(.*)/",
+      "dest": "/$1"
+    },
+
+    {
+      "src": "/([^\\.]+)$",
+      "dest": "/$1.html"
+    },
+
+    {
+      "src": "/.*\\.html$",
+      "status": 301,
+      "headers": { "Location": "/$1" },
+      "dest": "/"
+    },
+
+    {
+      "src": "/(.*)",
+      "headers": {
+        "Strict-Transport-Security": "max-age=31536000; includeSubDomains; preload",
+        "Cache-Control": "public, max-age=31536000, immutable"
+      },
+      "dest": "/$1"
     }
   ]
 }
