--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,26 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
-  "cleanUrls": true,
+  "version": 2,
+  "public": true,
   "builds": [
-    { "src": "*.html", "use": "@vercel/static" },
-    { "src": "*.css",  "use": "@vercel/static" },
-    { "src": "*.js",   "use": "@vercel/static" },
-    { "src": "*.{png,jpg,jpeg,svg,webp}", "use": "@vercel/static" }
+    {
+      "src": "index.html",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "*.html",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "script.js",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "style.css",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "assets/**",
+      "use": "@vercel/static"
+    }
   ]
 }
