--- a/vercel.json
+++ b/vercel.json
@@ -2,28 +2,30 @@
   "version": 2,
 
   "builds": [
-    { "src": "*.html", "use": "@vercel/static" },
-    { "src": "*.css", "use": "@vercel/static" },
-    { "src": "*.js", "use": "@vercel/static" },
-    { "src": "*.{png,jpg,jpeg,svg,webp}", "use": "@vercel/static" }
+    { "src": "**/*", "use": "@vercel/static" }
   ],
 
   "routes": [
 
-    { "src": "/?", "dest": "/index.html" },
+    { "src": "^/$", "dest": "/index.html" },
 
-    { "src": "/profil/?", "dest": "/profil.html" },
-    { "src": "/layanan/?", "dest": "/layanan.html" },
-    { "src": "/karir/?", "dest": "/karir.html" },
-    { "src": "/kontak/?", "dest": "/kontak.html" },
+    { "src": "^/profil$", "dest": "/profil.html" },
+    { "src": "^/layanan$", "dest": "/layanan.html" },
+    { "src": "^/karir$", "dest": "/karir.html" },
+    { "src": "^/kontak$", "dest": "/kontak.html" },
 
-    { "src": "/404/?", "dest": "/404.html" },
+    { "src": "^/profil/$", "dest": "/profil.html" },
+    { "src": "^/layanan/$", "dest": "/layanan.html" },
+    { "src": "^/karir/$", "dest": "/karir.html" },
+    { "src": "^/kontak/$", "dest": "/kontak.html" },
+
+    { "src": "^/404$", "dest": "/404.html" },
 
     {
       "src": "/(.*)",
       "dest": "/$1",
       "headers": {
-        "Cache-Control": "no-store"
+        "Cache-Control": "no-cache, no-store, must-revalidate"
       }
     }
   ]
